# HeartRateExtraction-Cpp

./: .gitignore  CMakeLists.txt  README.md
include/: CalHeartRate.hpp
src/: CalHeartRate.cpp  main.cpp
