cmake_minimum_required(VERSION 2.8)
project( FindHeartRate )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( FindHeartRate src/CalHeartRate.cpp src/main.cpp)
target_include_directories(FindHeartRate PRIVATE include)
target_link_libraries( FindHeartRate ${OpenCV_LIBS} )
